tests/invalid_Programs/type-checker/inconsistent_body.kln
function main():integer
    print(1)
